# Operator

./: CMakeLists.txt
app/: CMakeLists.txt  main.cpp
include/inserter/: concepts.hpp  inserter.hpp  macros.hpp  policies.hpp  tags.hpp  util.hpp
include/operator/: concepts.hpp  deleters.hpp  inserters.hpp  macros.hpp  operation.hpp  operator.hpp  policies.hpp  tags.hpp  type_traits.hpp  util.hpp
